; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/um/os-Linux/sys-x86_64/extr_prctl.c_os_arch_prctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/um/os-Linux/sys-x86_64/extr_prctl.c_os_arch_prctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PTRACE_ARCH_PRCTL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @os_arch_prctl(i32 %0, i32 %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i64* %2, i64** %6, align 8
  %7 = load i32, i32* @PTRACE_ARCH_PRCTL, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i64*, i64** %6, align 8
  %10 = ptrtoint i64* %9 to i64
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @ptrace(i32 %7, i32 %8, i64 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @ptrace(i32, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
